# smb-decomp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  GMBE8P.map  Makefile  Makefile_pc  README.md  asmdiff.sh  calcprogress.py  diff.py  diff_settings.py  dump.txt  extmath.txt  gen_compile_commands.py  genstubs.sh  ldscript.lcf  make_context.sh  map2dict.awk  partial.lcf  static.lcf  stubs.c  supermonkeyball  supermonkeyball.sha1
Source/: README.md  ext_math.c  ext_math.h  main.c  main.h  trig_lut.h
Source/Utilities/: GenerateTrigLUT.c  makefile.bat  output.txt  output2.txt
asm/: DEMOPuts.s  adv.s  avdisp.s  background.s  ball.s  bg_bonus.s  bg_end.s  bg_jungle.s  bg_master.s  bg_old_bluesky.s  bg_old_bonus.s  bg_old_cave.s  bg_old_extramaster.s  bg_old_ice.s  bg_old_night.s  bg_old_sand.s  bg_old_space.s  bg_old_storm.s  bg_old_sunset.s  bg_old_water.s  bg_pilot.s  bg_sand.s  bg_space.s  bg_storm.s  bg_sunset.s  bg_water.s  bitmap.s  c++_exception_data.s  camera.s  code.s  code_0.s  code_1.s  code_2.s  code_3.s  code_4.s  code_5.s  course.s  credits.s  data.s  effect.s  (+55 more)
asm/lib/: data.s
asm/lib/TRK_MINNOW_DOLPHIN/: dispatch.s  dolphin_trk.s  dolphin_trk_glue.s  flush_cache.s  main_TRK.s  mainloop.s  mem_TRK.s  mpc_7xx_603e.s  msg.s  msgbuf.s  msghndlr.s  mutex_TRK.s  notify.s  nubevent.s  nubinit.s  serpoll.s  support.s  targcont.s  targimpl.s  usr_put.s
asm/lib/ai/: ai.s
asm/lib/amcnotstub/: amcnotstub.s
asm/lib/amcstubs/: AmcExi2Stubs.s
asm/lib/ar/: ar.s  arq.s
asm/lib/base/: PPCArch.s
asm/lib/card/: CARDBios.s  CARDBlock.s  CARDCheck.s  CARDCreate.s  CARDDelete.s  CARDDir.s  CARDFormat.s  CARDMount.s  CARDOpen.s  CARDRdwr.s  CARDRead.s  CARDRename.s  CARDStat.s  CARDUnlock.s  CARDWrite.s
asm/lib/db/: db.s
asm/lib/dsp/: dsp.s  dsp_debug.s  dsp_task.s
asm/lib/dtk/: dtk.s
asm/lib/dvd/: dvd.s  dvderror.s  dvdfs.s  dvdlow.s  dvdqueue.s  fstload.s
asm/lib/exi/: EXIBios.s  EXIUart.s
asm/lib/gx/: GXAttr.s  GXBump.s  GXDisplayList.s  GXDraw.s  GXFifo.s  GXFrameBuf.s  GXGeometry.s  GXInit.s  GXLight.s  GXMisc.s  GXPerf.s  GXPixel.s  GXStubs.s  GXTev.s  GXTexture.s  GXTransform.s
asm/lib/hio/: hio.s
asm/lib/mtx/: mtx.s  mtx44.s  vec.s
asm/lib/musyx/: HARDWARE.s  chorus_fx.s  hw_aramdma.s  hw_dolphin.s  hw_dspctrl.s  hw_memory.s  hw_volconv.s  reverb.s  reverb_fx.s  s_data.s  seq.s  seq_api.s  snd3d.s  snd_math.s  snd_midictrl.s  snd_service.s  snd_synthapi.s  stream.s  synth.s  synth_2.s  (+5 more)
asm/nonmatchings/: GXSetChanAmbColor.s  GXSetChanMatColor.s  GXSetTevOrder_cached.s  OSInitAlloc.s  TRK_fill_mem.s  TRK_memset.s  bg_storm_draw.s  bomb_frag_sprite_main.s  build_tev_material.s  camera_clear.s  draw_stage_objects.s  draw_timer_bomb_fuse.s  ev_mouse_main.s  ev_recplay_main.s  ev_sound_init.s  func_8000C8D4.s  func_8000D5E4.s  func_80017160.s  func_80019EB0.s  func_80035438.s  func_80044E18.s  func_80045194.s  func_800463E8.s  func_80048084.s  func_80048420.s  func_8004AA18.s  func_8005562C.s  func_80067808.s  func_8006AD3C.s  func_800700D8.s  func_80071B78.s  func_800885EC.s  func_8008B3B8.s  func_80090524.s  func_8009EA30.s  func_800A4628.s  func_800A6BF0.s  g_build_tev_material.s  g_draw_char.s  init_ape_model_info.s  (+8 more)
data/: bg_d_p.nlobj.h  bg_j_p.nlobj.h  bg_jun.gma.h  bg_mst.gma.h  bg_nig.gma.h  bg_pil.gma.h  bg_snd.gma.h  bg_spa.gma.h  bg_stm.gma.h  bg_sun.gma.h  bg_wat.gma.h  common.gma.h  common.nlobj.h
disasm-tools/: code_pointers.py  create_function_header.awk  create_variables_header.awk  ddump.py  decode_floats.py  dump_camera_structs.pl  dump_common_data.py  dump_float_constants.py  dump_gma_model_names.py  dump_nlobj_model_names.py  dump_sprite_structs.pl  gen_trig_tables.py  kill_pointers.py  label_jump_table_cases.py  reldisasm.py  rename_sym.sh  string_labels.py
fmt/: README_notice.txt
include/: assert.h  ctype.h  dolphin.h  errno.h  float.h  math.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  wchar.h
include/MetroTRK/: DolphinTrkInit.h
include/dolphin/: DBInterface.h  DEMOPuts.h  GXBump.h  GXCommandList.h  GXCull.h  GXDispList.h  GXDraw.h  GXEnum.h  GXFifo.h  GXFrameBuffer.h  GXGeometry.h  GXGet.h  GXLighting.h  GXManage.h  GXPerf.h  GXPixel.h  GXStruct.h  GXTev.h  GXTexture.h  GXTransform.h  GXVert.h  OSAlarm.h  OSAlloc.h  OSCache.h  OSContext.h  OSError.h  OSFont.h  OSInterrupt.h  OSModule.h  OSMutex.h  OSReset.h  OSResetSW.h  OSThread.h  PPCArch.h  ai.h  ar.h  arq.h  card.h  dsp.h  dtk.h  (+10 more)
include/musyx/: musyx.h  seq.h
libc/: math.h  stdarg.h  stdlib.h  string.h
libraries/: data.s
libraries/TRK_MINNOW_DOLPHIN/: MetroTRK.h  mutex_TRK.c  usr_put.c
libraries/ai/: ai.c
libraries/amcnotstub/: amcnotstub.c
libraries/card/: CARDBios.c
libraries/db/: db.c
libraries/demo/: DEMOFont.c
libraries/dolphin_pc/: GX.c  GX_gles2.c  OS.c  __dolphin_pc.h  ar.c  arq.c  dvd.c  pad.c  pad_dinput.c  pad_evdev.c  vi.c  vi_glfw.c  vi_wgl.c
libraries/dsp/: __dsp.h  dsp.c  dsp_debug.c  dsp_task.c
libraries/dvd/: __dvd.h  dvdqueue.c  fstload.c
libraries/gx/: GXDisplayList.c  GXFifo.c  GXGeometry.c  GXLight.c  GXPerf.c  GXStubs.c  GXTev.c  GXTransform.c  __gx.h
libraries/hio/: hio.c
libraries/mtx/: mtx44.c
libraries/musyx/: HARDWARE.c  hw_aramdma.c  hw_dolphin.c  hw_memory.c  musyx_priv.h  reverb_fx.c  seq_api.c  snd_math.c  snd_service.c  snd_synthapi.c  synth_ac.c  synth_dbtab.c
libraries/os/: OSAlloc.c  OSArena.c  OSAudioSystem.c  OSError.c  OSMemory.c  OSMutex.c  OSSync.c  __os.h  __ppc_eabi_init.c  __start.c
src/: DEMOPuts.c  adv.c  adv.h  avdisp.c  background.c  background.h  ball.c  ball.h  bg_bonus.c  bg_end.c  bg_jungle.c  bg_jungle_BACKUP_20458.c  bg_old_bonus.c  bg_old_cave.c  bg_old_night.c  bg_old_sand.c  bg_old_space.c  bg_old_storm.c  bg_old_sunset.c  bg_sand.c  bg_space.c  bg_storm.c  bg_sunset.c  bg_water.c  bitmap.c  bitmap.h  bmp_list_1.c  bmp_list_10.c  bmp_list_11.c  bmp_list_12.c  bmp_list_13.c  bmp_list_14.c  bmp_list_2.c  bmp_list_3.c  bmp_list_4.c  bmp_list_5.c  bmp_list_6.c  bmp_list_7.c  bmp_list_8.c  bmp_list_9.c  (+159 more)
tools/: Makefile  elf2dol.c  elf2rel.c  lzss.c
(+254 files in other folders)
